--- a/index.html
+++ b/index.html
@@ -48,31 +48,33 @@
 			    #pattern-bg {
 			    	background-image: url('img/pattern.svg');
 					  background-size: cover;
-					  min-height: 200vh;
+					  min-height: 110vh;
 			    }
 			    #phone-container {
 			    	display: inline-block;
 			    	position: absolute;
-			    	top: -10rem;
+			    	top: -3rem;
 			    	left: 50%;
-			    	margin-left: -203px;
-			    	background-image: url('img/iPhone.png');
-			    	width: 406px;
-			    	height: 830px;
+			    	margin-left: -80px;
+			    	background-image: url('img/iPhone-small-140.png');
+				    width: 162px;
+				    height: 332px;
 			    }
 
 			    #phone-video-container {
 				    display: inline-block;
-				    width: 349px;
-				    height: 320px;
+				    width: 140px;
+				    height: 160px;
 				    overflow: hidden;
 				    text-align: center;
 				    position: relative;
-				    margin-top: 166px;
-				    margin-left: 29px;
+				    margin-top: 42px;
+				    margin-left: 11px;
 			    }
 			    #phone-videoEl {
-			    	margin-left: -65px;
+			      margin-left: -85px;
+	   				width: 320px;
+	   				position: relative;
 			    }
 			  #container {
 		      overflow: hidden;
@@ -87,6 +89,34 @@
 
 		      object-fit: cover;
 		      height: 100%; width: 100%;
+
+		    }
+		    #hands {
+		    	position: absolute;
+		    	left: 0;
+		    	right: 0;
+		    	bottom: 0;
+		    }
+		    #hands img {
+		    	text-align: center;
+		    	position: absolute;
+		    	bottom: 0;
+		    	left: 50%;
+    			margin-left: -224px;
+		    }
+		    .top_bar {
+		    	position: absolute;
+		    	top: 0;
+		    	left: 0;
+		    	right: 0;
+		    	height: 2rem;
+		    	background-color: rgba(233,233,233,0.2);
+		    	text-align: center;
+		    }
+		    ul, li {
+		    	list-style-type: none;
+		    	display: inline-block;
+		    	line-height: 2rem;
 		    }
 			</style>
 
@@ -104,11 +134,18 @@
     			<video id="phone-videoEl" loop muted></video>
     		</div>
     	</div>
+    	<div id="hands"><img src="img/hands.png"></div>
     </section>
 
     <section id="video-bg">
     	<div id="container">
     		<video id="videoEl" loop muted></video>
+    	</div>
+    	<div class="top_bar">
+    		<ul><li>github</li>
+    		<li>twitter</li>
+    		<li>instagram</li>
+    		<li></li></ul>
     	</div>
 	    <div id="video_cover"></div>
 	    <div id="overlay"></div>
