--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Mike Baker, Bike Maker @mibake</title>
+
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/button.css" />
+
+   <script src="js/TweenMax.min.js"></script>
 
 			  <style>
+
+
+
+@font-face {
+    font-family: 'comic_bookbold_italic';
+    src: url('css/comic_book_bold_italic-webfont.woff2') format('woff2'),
+         url('css/comic_book_bold_italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 			    * {
 			      margin: 0; padding: 0;
 			    }
@@ -13,74 +31,98 @@
 			      height: initial;
 			      overflow: initial;
 			    }
+			    section {
+			    	min-height: 100vh;
+			    	width: 100%;
+			    	position: relative;
+					  box-shadow: 0px 1px 10px #2b2b2b;
+			    }
+			    a {
+			    	color: #4e6590;
+			    	font-weight: bold;
+			    }
 
 			    #hero {
 			    	background-color: #f6f7f4;
-					  background-size: cover;
-					  background-position: center 0;
-					  background: url('img/hero2.jpg') no-repeat;
+			    	background-color: #f7f8f3;
+
+					  overflow: auto;
 			    }
 
-			    section {
-			    	min-height: 100vh;
-			    	min-width: 40em;
-			    	position: relative;
-			    }
 
 			    #hero-msg {
+			    	display: none; /* display none mobile first */
 						background: #ff6730; /* Old browsers */
 						background: -moz-linear-gradient(left, #ff6730 0%, #ffda38 100%); /* FF3.6-15 */
 						background: -webkit-linear-gradient(left, #ff6730 0%,#ffda38 100%); /* Chrome10-25,Safari5.1-6 */
 						background: linear-gradient(to right, #ff6730 0%,#ffda38 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 						filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6730', endColorstr='#ffda38',GradientType=1 ); /* IE6-9 */
 
-						padding: .5rem;
-						display: inline-block;
+						padding: .2rem .8rem .1rem .7rem;
 						position: absolute;
-						bottom: 50px;
+						bottom: 1rem;
 						left: 5rem;
 						border: 2px solid black;
 			    }
 			    #hero-msg p {
 			    	font-size: 1rem;
-			    	font-family: Arial;
+			    	font-family: 'comic_bookbold_italic', sans-serif;
+			    	text-transform: lowercase;
 			    }
 			    #pattern-bg {
 			    	background-image: url('img/pattern.svg');
 					  background-size: cover;
 					  min-height: 110vh;
+					  border-top: 1px solid brown;
+					  box-shadow: none;
 			    }
 			    #phone-container {
-			    	display: inline-block;
-			    	position: absolute;
-			    	top: -3rem;
+			    	display: none;
 			    	left: 50%;
 			    	margin-left: -80px;
 			    	background-image: url('img/iPhone-small-140.png');
 				    width: 162px;
 				    height: 332px;
+				    position: absolute;
+    				top: -7rem;
+
+			    }
+			    .phone-fixed {
+				    position: fixed !important;
+				    bottom: 15.41rem;
+				    top: inherit !important;
 			    }
 
 			    #phone-video-container {
 				    display: inline-block;
 				    width: 140px;
-				    height: 160px;
+				    height: 133px;
 				    overflow: hidden;
 				    text-align: center;
 				    position: relative;
-				    margin-top: 42px;
+				    margin-top: 71px;
 				    margin-left: 11px;
 			    }
 			    #phone-videoEl {
-			      margin-left: -85px;
-	   				width: 320px;
+			      margin-left: -85px;    
+			      height: 134px;
+			      width: auto;
+    				left: 25%;
 	   				position: relative;
 			    }
+
+
+		    #video-bg {
+		    	height: initial;
+		    	min-height: initial;
+		    }
+
 			  #container {
 		      overflow: hidden;
 		      position: absolute;
 		      top: 0; left: 0; right: 0; bottom: 0;
 		    }
+
 		    #videoEl  {
 		      position: absolute;
 
@@ -92,10 +134,32 @@
 
 		    }
 		    #hands {
-		    	position: absolute;
+		    	display: none;
+		    	position: fixed;
 		    	left: 0;
 		    	right: 0;
 		    	bottom: 0;
+
+			   transition: opacity .8s ease-in-out;
+			   -moz-transition: opacity .8s ease-in-out;
+			   -webkit-transition: opacity .8s ease-in-out;
+		    }
+		    .hands {
+		    	height: 0;
+		    	opacity: 0;
+
+			   transition: opacity .8s ease-in-out;
+			   -moz-transition: opacity .8s ease-in-out;
+			   -webkit-transition: opacity .8s ease-in-out;
+		    }
+		    .hands-on {
+		    	opacity: 1;
+		    	height: auto;
+
+			   transition: opacity .8s ease-in-out;
+			   -moz-transition: opacity .8s ease-in-out;
+			   -webkit-transition: opacity .8s ease-in-out;
+
 		    }
 		    #hands img {
 		    	text-align: center;
@@ -103,6 +167,7 @@
 		    	bottom: 0;
 		    	left: 50%;
     			margin-left: -224px;
+    			opacity: 0.7;
 		    }
 		    .top_bar {
 		    	position: absolute;
@@ -110,31 +175,357 @@
 		    	left: 0;
 		    	right: 0;
 		    	height: 2rem;
-		    	background-color: rgba(233,233,233,0.2);
+		    	background-color: rgba(247,248,243,0.2);
 		    	text-align: center;
+					color: #222;
 		    }
-		    ul, li {
+
+		   ul, li {
 		    	list-style-type: none;
+		    }
+		   .top_bar ul { 
+		   	overflow: auto;
+		   	display: inline-block;
+		   }
+
+		   .top_bar li {
 		    	display: inline-block;
 		    	line-height: 2rem;
+		    	height: 2rem;
+		    	float: left;
+		    	margin: 0 .3rem;
 		    }
+
+		   .top_bar li a,.top_bar li a span {
+		    	line-height: 2rem;
+		    	height: 2rem;
+		    	float: left;
+					color: #222;
+		   }
+		   .top_bar li a span {
+		   	margin-right: .2rem;
+		   }
+
+		   .top_bar li a:hover {
+		   	color: #4e6590;
+		   }
+		    p {
+		    	max-width: 36rem;
+		    }
+
+		    #hello {
+		    	max-width: 35rem;
+		    	padding-top: 4rem;
+
+		    	background-color: rgba(247,248,243,0.4);
+		    	border-radius: 0 0 0 1rem;
+
+		    }
+
+		    .left-col, .right-col {
+		    	display: inline-block;
+		    	overflow: auto;
+		    	text-align: left;
+		    	float: left;
+		    }
+
+		    .right-col {
+		    	margin: 0 0 0 .2rem;
+		    }
+		    .left-col {
+		    	text-align: right;
+		    	margin: 0 .2rem 0 0;
+   			 min-width: 13rem;
+   			 clear: both;
+		    }
+
+		    #sum {
+		    	margin-top: 1.2rem;
+  			  text-align: center;
+		    }
+
+		    .right-sum {
+		    	text-align: left;
+		    	overflow: auto;
+		    	}
+
+		    .left-sum {
+		    	text-align: right;
+		    }
+		    .center-me {
+		    	display: inline-block;
+		    	margin: 0 auto;
+		    	text-align: center;
+		    }
+		    .prof-container, h1, h2 {
+		    	text-align: center;
+		    }
+		    .prof-container {
+		    	margin-bottom: .5rem;
+		    }
+		    h2 {
+		    	margin: .2rem 0;
+		    }
+
+		    .intro-txt {
+		    	margin: 0.2rem 2rem 1.2rem;
+		    	padding: 1.2rem;
+		    }
+
+		    .right {
+		    	float: right;
+		    }
+
+strong {
+	display: inline;
+	background-color: yellow;
+	line-height: 1.2rem;
+	height: 1.2rem;
+}
+.work-container {
+    margin: 3rem auto 0;
+    max-width: 53rem;
+    padding: 0 3rem 13rem 3rem;
+
+	  overflow: hidden;
+}
+h3 { margin-top: 2rem; }
+h4 {
+	text-decoration: underline;
+	margin: 1.2rem 0 .8rem;
+}
+h5 {
+	text-decoration: underline;
+	font-size: 1rem;
+	margin: .8rem 0 0 0;
+}
+.wrap {
+	max-width: 1250px;
+	margin: 0 auto;
+}
+
+.col {
+	width: 100%;
+	display: block;
+	font-size: 1rem;
+}
+
+
+.row {
+	  margin: .7rem 0;
+}
+
+.button {
+	font-size: 1.2rem;
+	border-color: transparent;
+	color: #fff;
+    background-color: #ff2a45;
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+}
+
+#hire-me {
+	  margin: 2rem;
+    float: right;
+}
+
+.social-icon {
+	width: 27px;
+	height: 27px;
+	text-align: center;
+	overflow: hidden;
+	position: relative;
+	display: inline-block;
+	opacity: .8;
+}
+.social-icon img {
+	position: absolute;
+	left: 0;
+}
+#twitter img {
+	top: -50px;
+
+}
+#instagram img {
+	top: -100px;
+}
+
+
+
+@media only screen and (min-width: 899px)  {
+
+	#hero {
+							    -webkit-background-size: cover;
+			  -moz-background-size: cover;
+			  -o-background-size: cover;
+  background-size: cover;
+					  background: url('img/hero2.jpg') no-repeat center 0% fixed #f6f8f3;
+	}
+	#hero-msg { display: inline-block; }
+	
+	#hero-msg .first-letter { font-size: 1.2rem; }
+
+	.right-col {
+   			 min-width: 12rem;}
+
+			    #phone-container {
+			    	display: inline-block;
+			    }
+	.col {
+		width: 28%;
+		display: inline-block;
+		font-size: 1rem;
+	}
+	.col-wide {
+		width: 38%;
+	}
+	#hands {
+		 display: inline-block;
+	}
+
+	 #video-bg {
+		   min-height: 100vh;
+	 }
+
+
+}
+
 			</style>
 
      </head>
     <body>
 
     <section id="hero">
+	    <div class="wrap">
+				<div class="right" id="hello">
+					<div class="prof-container">
+						<img src="img/prof.jpg" id="prof" class="prof">
+					</div>
 
-    	<div id="hero-msg"><p>I know how to create a hero img</p></div>
+		    	<h2>Michael Baker</h2>
+		    	<h2>Front-End Development</h2>
+
+		    	<div id="sum">
+		    		<div class="center-me">
+
+							<div class="left-col"><span class="left-sum">JavaScript + Interface </span></div><div class="right-col"><span class="right-sum">Engineer</span></div>
+							<div class="left-col"><span class="left-sum">Security </span></div><div class="right-col"><span class="right-sum">Enthusiast</span></div>
+							<div class="left-col"><span class="left-sum">Responsive Web Design </span></div><div class="right-col"><span class="right-sum">Sexpert</span></div>
+						</div>
+		    	</div>
+
+		    	<p class="intro-txt"><strong>I work with creative agencies</strong> across the country, delivering websites and
+		providing front-end support for web applications,
+		 <strong>building fast, responsive, accessible front-ends,</strong> with a strong focus on
+		Vanilla JavaScript, SVG, CSS, HTML5, responsive web design, and performace.
+		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="svg-filters">
+						<defs>
+							<filter id="filter-goo-3">
+								<feGaussianBlur in="SourceGraphic" stdDeviation="7" result="blur" />
+								<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+								<feComposite in="SourceGraphic" in2="goo" />
+							</filter>
+						</defs>
+					</svg>
+					<a id="hire-me" class="button button--2 button--3" href="https://twitter.com/mibake">
+						Hire me
+						<span class="button__bg"></span>
+					</a></p>
+							
+					</div>
+				</div>
+
+    	<div id="hero-msg"><p><span class="first-letterx">I</span> know how to create a hero img</p></div>
     </section>
 
     <section id="pattern-bg">
-    	<div id="phone-container">
+
+    	<div id="hands" class="hands"><img src="img/hands.png"></div>
+    	<div class="work-container">
+    		<h3>Talents</h3>
+    			<ul>
+    			<li>JavaScript</li>
+    			<li>Responsive Web Design</li>
+    			<li>Progressive Engancement</li>
+    			<li>WordPress</li>
+    			<li>Node.JS</li>
+    			<li>Angular.JS</li>
+    			<li>d3.JS</li>
+    			<li>Elastic Search</li>
+    			<li>Kibana</li>
+    			<li>Interaction Design</li>
+    			<li>Data Visualization & Interface Design</li>
+    			</ul>
+    		<p></p>
+    		<h3>Creative Agency Work</h3>
+    		<h4>Clients</h4>
+    		<ul>
+    			<li>Discover Los Angeles</li>
+    			<li>The Mirage Hotel</li>
+    			<li>Walmart Labs</li>
+    			<li>Chase bank</li>
+    			<li>Sun Edison</li>
+    			<li>Sqaure</li>
+    			<li>Tensla</li>
+    			<li>IHOP</li>
+    			<li>Lauren Conrad</li>
+    			<li>& more&hellip;</li>
+    		</ul>
+    		<h4>Agencies</h4>
+    		<ul>
+    			<li>Young Company</li>
+    			<li>FLIPSIDE</li>
+    			<li>HEILBrice</li>
+    			<li>Big Bad Goose</li>
+    			<li>y mucho más&hellip;</li>
+
+    		</ul>
+
+    		<h3>Security Work</h3>
+    		<h5>Cisco</h5>
+						<p>OpenSOC
+				<br><a href="https://opensoc.github.io/">https://opensoc.github.io</a></p>
+
+    		<h5>Adblock</h5>
+						<p><a href="https://getadblock.com/">https://getadblock.com</a>
+						</p>
+
+    		<h5>Disconnect</h5>
+						<p><a href="https://disconnect.me/">https://disconnect.me</a>
+						</p>
+
+    		<h5>Matasano Security</h5>
+						<p><a href="https://microcorruption.com/">https://microcorruption.com</a>
+						</p>
+					<h3>School Work</h3>
+					<div class="three-columns">
+						<div class="row">
+							<span class="col">Computer Science</span><span class="col col-wide">Syracuse University</span><span class="col">Syracuse, NY</span>
+						</div>
+						<div class="row">
+							<span class="col">Statics, Econ, Law</span><span class="col col-wide">Saddleback College</span><span class="col">Orange County, CA</span>
+						</div>
+						<div class="row">
+							<span class="col">3D Modeling</span><span class="col col-wide">Gnoman School of Visual Effects</span><span class="col">Hollywood, CA</span>
+						</div>
+						<div class="row">
+							<span class="col">Scientific Visualization</span><span class="col col-wide">Chapman University</span><span class="col">Orange County, CA</span>
+						</div>
+						<div class="row">
+							<span class="col">Real World</span><span class="col col-wide">Real World</span><span class="col">SoCal & Sillicon Valley</span>
+						</div>
+					</div>
+    		</div>
+    	<div id="phone-container" class="">
     		<div id="phone-video-container">
     			<video id="phone-videoEl" loop muted></video>
     		</div>
+	    	<div id="clear-phone" style="position:absolute; top: 0; left: 0;">
+	    		<img src="img/iPhone-small-140-clear.png">
+	    	</div>
     	</div>
-    	<div id="hands"><img src="img/hands.png"></div>
     </section>
 
     <section id="video-bg">
@@ -142,9 +533,9 @@
     		<video id="videoEl" loop muted></video>
     	</div>
     	<div class="top_bar">
-    		<ul><li>github</li>
-    		<li>twitter</li>
-    		<li>instagram</li>
+    		<ul><li><a href="https://github.com/codakid"><span id="github" class="social-icon"><img src="img/social_icons-small.png"></span>github</a></li>
+    		<li><li><a href="https://twitter.com/mibake"><span id="twitter" class="social-icon"><img src="img/social_icons-small.png"></span>twitter</a></li>
+    		<li><li><a href="https://www.instagram.com/mibake"><span id="instagram" class="social-icon"><img src="img/social_icons-small.png"></span>instagram</a></li>
     		<li></li></ul>
     	</div>
 	    <div id="video_cover"></div>
