--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 			    #hero-msg p {
 			    	font-size: 1rem;
 			    	font-family: 'comic_bookbold_italic', sans-serif;
-			    	text-transform: lowercase;
 			    }
 			    #pattern-bg {
 			    	background-image: url('img/pattern.svg');
@@ -293,13 +292,12 @@ strong {
 
 	  overflow: hidden;
 }
-h3 { margin-top: 2rem; }
+h3 { margin-top: 2rem;
+			margin-left: -2rem; }
 h4 {
-	text-decoration: underline;
 	margin: 1.2rem 0 .8rem;
 }
 h5 {
-	text-decoration: underline;
 	font-size: 1rem;
 	margin: .8rem 0 0 0;
 }
@@ -465,7 +463,7 @@ h5 {
 					</div>
 				</div>
 
-    	<div id="hero-msg"><p><span class="first-letterx">I</span> know how to create a hero img</p></div>
+    	<div id="hero-msg"><p><span class="first-letterx">I</span> know how to create a HERO IMG</p></div>
     </section>
 
     <section id="pattern-bg">
