--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ h5 {
     			<li>Discover Los Angeles</li>
     			<li>The Mirage Hotel</li>
     			<li>Walmart Labs</li>
-    			<li>Chase bank</li>
+    			<li>Chase Bank</li>
     			<li>Sun Edison</li>
     			<li>Sqaure</li>
     			<li>Tensla</li>
