--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Mike Baker, Site Maker @mibake</title>
+        <title>Mike Baker, Site Maker @mibake, JavaScript Developer, Responsive Web Design, UX Engineer</title>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/button.css" />
@@ -11,15 +11,6 @@
    <script src="js/TweenMax.min.js"></script>
 
 			  <style>
-
-					@font-face {
-					    font-family: 'comic_bookbold_italic';
-					    src: url('css/comic_book_bold_italic-webfont.woff2') format('woff2'),
-					         url('css/comic_book_bold_italic-webfont.woff') format('woff');
-					    font-weight: normal;
-					    font-style: normal;
-
-					}
 			    * {
 			      margin: 0; padding: 0;
 			    }
@@ -182,15 +173,18 @@
 		    }
 
 		   .top_bar li a,.top_bar li a span {
-		    	line-height: 2rem;
-		    	height: 2rem;
 		    	float: left;
 					color: #222;
-					display: inline-block;
-    			overflow: auto;
     			z-index: 12;
     			position: relative;
 		   }
+
+		   .top_bar li a {
+		    	line-height: 2rem;
+		    	height: 2rem;
+					display: inline-block;
+				}
+
 		   .top_bar li a span {
 		   	margin-right: .2rem;
 		   }
@@ -350,6 +344,16 @@ h5 {
 
 
 @media only screen and (min-width: 899px)  {
+	
+
+	@font-face {
+	    font-family: 'comic_bookbold_italic';
+	    src: url('css/comic_book_bold_italic-webfont.woff2') format('woff2'),
+	         url('css/comic_book_bold_italic-webfont.woff') format('woff');
+	    font-weight: normal;
+	    font-style: normal;
+
+	}
 
 	#hero {
 							    -webkit-background-size: cover;
@@ -493,6 +497,11 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
 
     	<div id="hands" class="hands"><img src="img/hands.png"></div>
     	<div class="work-container">
+
+    		<h3>Neato Factoids</h3>
+    			<ul>
+    			<li>My first post on Hacker News went viral and stayed at #2 on the front page for a day.</li>
+    			<li>I made a TIL post on Reddit that made it to the front page and stayed there all night.</li>
     		<h3>Talents</h3>
     			<ul>
     			<li>JavaScript</li>
@@ -500,8 +509,6 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
     			<li>Progressive Engancement</li>
     			<li>WordPress</li>
     			<li>Node.js</li>
-    			<li>AngularJS</li>
-    			<li>D3.js</li>
     			<li>Elastic Search</li>
     			<li>Kibana</li>
     			<li>Interaction Design</li>
