--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@ h5 {
 
 		    	<h2>Michael Baker</h2>
 		    	<h2>Front-End Development</h2>
+		    	<h2>UX Designer</h2>
 
 		    	<div id="sum">
 		    		<div class="center-me">
