Add social share meta tags.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 				<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 				<meta name="theme-color" content="#ffffff">
 
+				<meta property="og:title" content="JavaScript Engineer, UX Designer, Progressive Enhancement & Almonds">
+				<meta property="og:description" content="Mike Baker, Site Maker @mibake, JavaScript Developer, Responsive Web Design, UX Engineer, looking for an excuse to travel distances near and far to talk with you in person.">
+				<meta property="og:image" content="http://mibake.space/img/Mike-Baker_site-maker_Hire-this-guy.jpg">
+				<meta property="og:url" content="http://mibake.space">
+				<meta name="twitter:card" content="http://mibake.space/img/Mike-Baker_site-maker_Hire-this-guy.jpghttp:/"mibake.space/>
 				
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/button.css" />
@@ -535,7 +540,7 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
 							</filter>
 						</defs>
 					</svg>
-					<a id="hire-me" class="button button--2 button--3" href="https://twitter.com/mibake">
+					<a id="hire-me" class="button button--2 button--3" href="https://www.linkedin.com/in/cleverbaker">
 						Hire me
 						<span class="button__bg"></span>
 					</a></p>
