--- a/index.html
+++ b/index.html
@@ -471,7 +471,9 @@ h5 {
 	 	border: 1px solid red;
 	 	top: 33px;
 	 	left: 33px;
-	 	display: none;
+	 	opacity: 0;
+	 	/*display: none;*/
+
 	 }
 
 @media only screen and (min-height: 580px)  {
@@ -590,12 +592,34 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
     			<li>Data Visualization & Interface Design</li>
     			</ul>
     		<p></p>
+
+					<h3>Conferences are for new ideas and making friends</h3>
+					<p>Perhaps you've seen me at a conference? Let's connect on <a href="https://twitter.com/mibake">Twitter</a> or <a href="https://https://www.linkedin.com/in/cleverbaker">LinkedIn</a>.<br>
+					Conferences I have attended:
+					<br>StartupGrind (Redwood City, CA)
+					<br>Node.js Interactive (Portland, OR)
+					<br>DEFCON 23 (Las Vegas, NV)
+					<br>JS Everywhere (San Jose, CA)
+					<br>TEDxManhattan Beach (Manhattan Beach, CA)
+					<br>
+					<br>
+					<p>I love getting a bargain for a conference ticket. If you know of an early bird special for any upcoming conferences, please let me know. I'm also glad to consult, volunteer, and speak at a conference.</p>
+					<h5>Subjects I'm interested in giving talks about:</h5>
+					<ul>
+						<li>Cryptocurrency</li>
+						<li>Working in teams</li>
+						<li>Working remotely</li>
+						<li>Leading distributed teams</li>
+						<li>Hiring teams overseas</li>
+						<p>"Updating elementary school education to the forefront of the future with Scientific Visualization"</p>
+					</ul>
+
     		<h3>Creative Agency Work</h3>
     		<h4>Clients</h4>
     		<ul>
     			<li>Discover Los Angeles</li>
     			<li>The Mirage Hotel</li>
-    			<li>Walmart Labs</li>
+    			<li>WalmartLabs</li>
     			<li>Chase Bank</li>
     			<li>Sun Edison</li>
     			<li>Telstra</li>
@@ -614,6 +638,7 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
     			<li>Crowdly</li>
     			<li>Prove</li>
     			<li>Lunar</li>
+    			<li>Southside Creative Group</li>
     			<li>y más&hellip;</li>
 
     		</ul>
@@ -680,7 +705,7 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
     </section>
 
     <section id="bonus" class="pancake">
-    	<a href="/pdf/BakerMichael_Frontend-Development--UX-Design_resume.pdf" class="hero-talk breathing-room">Resume</a>
+    	<a href="/pdf/BakerMichael_JavaScript-Engineer_UX-Design_resume.pdf" class="hero-talk breathing-room">Resume</a>
 
     </section>
 
