--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
     			<li>Progressive Engancement</li>
     			<li>WordPress</li>
     			<li>Node.js</li>
+    			<li>D3.js</li>
     			<li>Elastic Search</li>
     			<li>Kibana</li>
     			<li>Interaction Design</li>
@@ -596,6 +597,7 @@ JavaScript, SVG animations, CSS, HTML5, responsive web design, and performance.
 					<h3>Conferences are for new ideas and making friends</h3>
 					<p>Perhaps you've seen me at a conference? Let's connect on <a href="https://twitter.com/mibake">Twitter</a> or <a href="https://https://www.linkedin.com/in/cleverbaker">LinkedIn</a>.<br>
 					Conferences I have attended:
+					<br>Versus16 (San Francisco, CA)
 					<br>StartupGrind (Redwood City, CA)
 					<br>Node.js Interactive (Portland, OR)
 					<br>DEFCON 23 (Las Vegas, NV)
